--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,15 @@
 [versions]
-android-gradle-plugin = "8.1.3"
+android-gradle-plugin = "8.3.1"
 androidx-activity = "1.8.2"
 androidx-appcompat = "1.6.1"
 androidx-core = "1.12.0"
 androidx-documentfile = "1.0.1"
 androidx-fragment = "1.6.2"
 androidx-preference = "1.2.1"
-jgit = "6.7.0.202309050840-r"
-json = "20231013"
-kotlin = "1.9.20"
-kudzu = "5.1.0"
+kotlin = "1.9.23"
+kudzu = "5.2.0"
 material = "1.11.0"
-test-junit = "4.13.2"
+activity = "1.8.2"
 
 [libraries]
 androidx-activity = { group = "androidx.activity", name = "activity-ktx", version.ref = "androidx-activity" }
@@ -24,13 +22,7 @@ androidx-preference-ktx = { group = "androidx.preference", name = "preference-kt
 kudzu = { group = "io.github.copper-leaf", name = "kudzu-core", version.ref = "kudzu" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
-# Test
-junit = { group = "junit", name = "junit", version.ref = "test-junit" }
-
-# Build script
-jgit = { group = "org.eclipse.jgit", name = "org.eclipse.jgit", version.ref = "jgit" }
-jgit-archive = { group = "org.eclipse.jgit", name = "org.eclipse.jgit.archive", version.ref = "jgit" }
-json = { group = "org.json", name = "json", version.ref = "json" }
+activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-gradle-plugin" }
